environments/default/addons/ingress-nginx/resources/forwading-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-nginx-forwarding-alb"
  namespace: "ingress-nginx"
  labels:
    app: "ingress-nginx-forwarding-alb"
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-type: "instance"
    alb.ingress.kubernetes.io/subnets: ""
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "ssl-redirect"
            port:
              name: use-annotation
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "ingress-nginx-controller"
            port:
              number: 80
